Z-Index Fix Action Button
Fixed:
~ z-index bug with action button, floating under navigation

--- a/styling/03 styling test/style.css
+++ b/styling/03 styling test/style.css
@@ -130,6 +130,7 @@ input[type="checkbox"]:checked + label + .dot {
 	display: block;
 	position: fixed;
 	cursor: pointer;
+	z-index: 101;
 
 	width: 60px;
 	height: 60px;
